Fix possible alignment bug in checkbox div

--- a/style.css
+++ b/style.css
@@ -331,7 +331,7 @@ label {
 .is-read {
   font-size: 1rem;
   display: flex;
-  justify-content: start;
+  align-items: center;
   gap: .5rem;
 }
 
